force-app/main/default/objects/Application__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The date the application and pricing offer expires</description>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>