force-app/main/default/objects/Application__c/fields/Number_Of_Active_Tradelines__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Active_Tradelines__c</fullName>
    <description>The number of active credit cards, credit lines, or debts that a prospective borrower has</description>
    <label>Number Of Active Tradelines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>