force-app/main/default/objects/Application__c/fields/Total_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount__c</fullName>
    <description>The total dollar amount of the loan</description>
    <label>Total Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>