force-app/main/default/objects/Application__c/fields/Total_Loan_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount_Requested__c</fullName>
    <description>The total amount requested by the prospective borrower</description>
    <label>Total Loan Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>